# ODE_Solver

./: CMakeLists.txt  README.md  euler.cpp  input.txt  main.cpp  performance.md  plot.py  plot_pendulum.py  project_ode.cpp  test.cpp  test.txt  test_function.cpp  user_function.cpp  y_out
lib/: readme.md
src/: base_ode.cpp  base_ode.h  exp_euler.cpp  exp_euler.h  imp_euler.cpp  imp_euler.h  input.txt  main.cpp  rhs_func.cpp  rhs_func.h  rk2.cpp  rk2.h  rk4.cpp  rk4.h
test/: test.cpp
